--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rubik', serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
-  }
-  
-  header {
-    background: #4caf50;
+    background-color: #273444;
     color: white;
-    padding: 1em;
-    text-align: center;
+    background-image: url('assets/bgstatus/bgnight.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    backdrop-filter: blur(5px) grayscale(0.5) contrast(1.2);
+    background-repeat: no-repeat;
   }
   
   main {
@@ -30,4 +30,38 @@ body {
     background: #222;
     color: white;
   }
+
+  .content-weather-info
+  {
+    background: rgba(151, 161, 172, 0.18);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(9.1px);
+    border-radius: 53% 43% 30% 49% / 47% 52% 48% 48%;
+    width: 394px;
+    height: 272px;
+  }
+
+
+#location-input {
+  background-color: rgba(114, 121, 129, 0.507);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  color: white;
+}
+
+
+#submit-location {
+  background-color: rgba(114, 121, 129, 0.507);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  color: white;
+  backdrop-filter: blur(8px);
+  padding: 10px 20px;
+  -webkit-backdrop-filter: blur(9.1px);
+  transition: all 200ms;
+  cursor: pointer;
+}
+
+#submit-location:hover {
+  background-color: rgba(38, 39, 41, 0.8);
+}
   
