--- a/md.css
+++ b/md.css
@@ -10,15 +10,19 @@
   --md-filled-button-container-shape: 0px;
   --md-card-background-color: var(--md-sys-color-surface);
   --md-card-color: var(--md-sys-color-on-surface);
-  --md-sys-color-primary: #BB86FC;
   --md-sys-color-on-primary: #1D1C1F;
   --md-sys-color-on-primary-secondary: #181818;
   --md-sys-color-on-surface: #E6E1E5;
   --md-sys-color-background: #131214;
-  --md-sys-color-outline: #BB86FC;
   --md-menu-container-color: var(--md-sys-color-on-primary);
   --md-menu-container-shape: 8px;
   --md-sys-typescale-body-large-font: system-ui;
+
+  --md-outlined-text-field-container-shape: 23px;
+  --md-sys-typescale-body-large: 400 1rem system-ui;
+  --md-sys-color-primary: #555555;
+  --md-sys-color-surface-container-highest: #e0e3e2;
+  --md-outlined-text-field-label-text-color: #e4f3f2;
 }
 
 
