--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,34 @@
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1%;
+    border-radius: 13px;
+    background-color: var(--md-sys-color-on-primary-secondary);
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
+
+}
+
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.get-weather-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#submit-location {
+    margin-left: 1%;
+}
+
+
+
 .card-weather {
-    width: 20%;
+    width: 26%;
+    min-width: fit-content;
 }
 
 .top-status {
@@ -13,8 +42,8 @@
     width: 100%;
     height: 200px;
     border-radius: 13px;
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-left: 1%;
+    top: 0;
     overflow: hidden;
     position: relative;
 }
@@ -42,7 +71,6 @@
 {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 #products-list-wrapper {
